deployment/manifests/deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: pxl-api
spec:
  selector:
    matchLabels:
      app: pxl-api
  replicas: 1
  template:
    metadata:
      labels:
        app: pxl-api
    spec:
      imagePullSecrets:
        - name: ${secret}
      containers:
      - name: pxl-api
        image: phenry20/pixelynx:api-${version}
        readinessProbe:
            failureThreshold: 3
            httpGet:
                path: /healthz
                port: 5000
                scheme: HTTP
        ports:
        - containerPort: 5000
          name: app-port
          protocol: TCP

      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.16
        command: ["/cloud_sql_proxy",
                  "-instances=${instance}=tcp:5432",
                  "-credential_file=/secrets/cloudsql/credentials.json"]
        securityContext:
          runAsUser: 2  # non-root user
          allowPrivilegeEscalation: false
        volumeMounts:
          - name: cloudsql-instance-credentials
            mountPath: /secrets/cloudsql
            readOnly: true
      volumes:
      - name: cloudsql-instance-credentials
        secret:
          secretName: service-account-token

---
apiVersion: v1
kind: Service
metadata:
    name: pxl-api-svc
spec:
    ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
    selector:
        app: pxl-api
    type: NodePort

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "pxl-api-ing"
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt
        certmanager.k8s.io/acme-http01-edit-in-place: "true"
        kubernetes.io/ingress.class: nginx
        kubernetes.io/tls-acme: "true"
        nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
    tls:
    - hosts:
      - ${domain}
      secretName: tls
    rules:
    - host: ${domain}
      http:
        paths:
        - path: /api(/|$)(.*) 
          backend:
            serviceName: pxl-api
            servicePort: 5000
